generated/commandsParser.ts
// Generated from src/utils/commands.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { commandsListener } from "./commandsListener";
import { commandsVisitor } from "./commandsVisitor";


export class commandsParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly NULL = 3;
	public static readonly NOT = 4;
	public static readonly QUOTE = 5;
	public static readonly SORT = 6;
	public static readonly BEFORE = 7;
	public static readonly AFTER = 8;
	public static readonly DATE_ATTRIBUTE = 9;
	public static readonly STRING_ATTRIBUTE = 10;
	public static readonly TEXT = 11;
	public static readonly TEXT_CHARS = 12;
	public static readonly NUMBER = 13;
	public static readonly WS = 14;
	public static readonly RULE_query = 0;
	public static readonly RULE_action_query = 1;
	public static readonly RULE_filter_query = 2;
	public static readonly RULE_raw_string = 3;
	public static readonly RULE_actions = 4;
	public static readonly RULE_assignment = 5;
	public static readonly RULE_filters = 6;
	public static readonly RULE_filter = 7;
	public static readonly RULE_sort_filter = 8;
	public static readonly RULE_sort = 9;
	public static readonly RULE_date_filter = 10;
	public static readonly RULE_string_filter = 11;
	public static readonly RULE_string = 12;
	public static readonly RULE_date_value = 13;
	public static readonly RULE_value_token = 14;
	public static readonly RULE_quoted_string = 15;
	public static readonly RULE_quoted_content = 16;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"query", "action_query", "filter_query", "raw_string", "actions", "assignment", 
		"filters", "filter", "sort_filter", "sort", "date_filter", "string_filter", 
		"string", "date_value", "value_token", "quoted_string", "quoted_content",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'>'", "':'", "'null'", "'!'", "'\"'", "'sort'", "'before'", 
		"'after'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "NULL", "NOT", "QUOTE", "SORT", "BEFORE", 
		"AFTER", "DATE_ATTRIBUTE", "STRING_ATTRIBUTE", "TEXT", "TEXT_CHARS", "NUMBER", 
		"WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(commandsParser._LITERAL_NAMES, commandsParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return commandsParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "commands.g4"; }

	// @Override
	public get ruleNames(): string[] { return commandsParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return commandsParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(commandsParser._ATN, this);
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, commandsParser.RULE_query);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				this.state = 34;
				this.action_query();
				}
				break;

			case 2:
				{
				this.state = 35;
				this.filter_query();
				}
				break;

			case 3:
				{
				this.state = 36;
				this.raw_string();
				}
				break;
			}
			this.state = 39;
			this.match(commandsParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public action_query(): Action_queryContext {
		let _localctx: Action_queryContext = new Action_queryContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, commandsParser.RULE_action_query);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 42;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << commandsParser.SORT) | (1 << commandsParser.DATE_ATTRIBUTE) | (1 << commandsParser.STRING_ATTRIBUTE))) !== 0)) {
				{
				this.state = 41;
				this.filters();
				}
			}

			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.WS) {
				{
				this.state = 44;
				this.match(commandsParser.WS);
				}
			}

			this.state = 47;
			this.match(commandsParser.T__0);
			this.state = 49;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 48;
				this.match(commandsParser.WS);
				}
				break;
			}
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.DATE_ATTRIBUTE || _la === commandsParser.STRING_ATTRIBUTE) {
				{
				this.state = 51;
				this.actions();
				}
			}

			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.WS) {
				{
				this.state = 54;
				this.match(commandsParser.WS);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public filter_query(): Filter_queryContext {
		let _localctx: Filter_queryContext = new Filter_queryContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, commandsParser.RULE_filter_query);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 57;
			this.filters();
			this.state = 59;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.WS) {
				{
				this.state = 58;
				this.match(commandsParser.WS);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public raw_string(): Raw_stringContext {
		let _localctx: Raw_stringContext = new Raw_stringContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, commandsParser.RULE_raw_string);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 61;
			this.value_token();
			this.state = 68;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === commandsParser.WS) {
				{
				{
				this.state = 62;
				this.match(commandsParser.WS);
				this.state = 64;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << commandsParser.SORT) | (1 << commandsParser.BEFORE) | (1 << commandsParser.AFTER) | (1 << commandsParser.DATE_ATTRIBUTE) | (1 << commandsParser.STRING_ATTRIBUTE) | (1 << commandsParser.TEXT))) !== 0)) {
					{
					this.state = 63;
					this.value_token();
					}
				}

				}
				}
				this.state = 70;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actions(): ActionsContext {
		let _localctx: ActionsContext = new ActionsContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, commandsParser.RULE_actions);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 71;
			this.assignment();
			this.state = 76;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 72;
					this.match(commandsParser.WS);
					this.state = 73;
					this.assignment();
					}
					}
				}
				this.state = 78;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let _localctx: AssignmentContext = new AssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, commandsParser.RULE_assignment);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			_la = this._input.LA(1);
			if (!(_la === commandsParser.DATE_ATTRIBUTE || _la === commandsParser.STRING_ATTRIBUTE)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 80;
			this.match(commandsParser.T__1);
			this.state = 81;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public filters(): FiltersContext {
		let _localctx: FiltersContext = new FiltersContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, commandsParser.RULE_filters);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 83;
			this.filter();
			this.state = 88;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 84;
					this.match(commandsParser.WS);
					this.state = 85;
					this.filter();
					}
					}
				}
				this.state = 90;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public filter(): FilterContext {
		let _localctx: FilterContext = new FilterContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, commandsParser.RULE_filter);
		try {
			this.state = 94;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case commandsParser.STRING_ATTRIBUTE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 91;
				this.string_filter();
				}
				break;
			case commandsParser.DATE_ATTRIBUTE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 92;
				this.date_filter();
				}
				break;
			case commandsParser.SORT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 93;
				this.sort_filter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sort_filter(): Sort_filterContext {
		let _localctx: Sort_filterContext = new Sort_filterContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, commandsParser.RULE_sort_filter);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 96;
			this.match(commandsParser.SORT);
			this.state = 97;
			this.match(commandsParser.T__1);
			this.state = 98;
			this.sort();
			this.state = 103;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 99;
					this.match(commandsParser.WS);
					this.state = 100;
					this.sort();
					}
					}
				}
				this.state = 105;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sort(): SortContext {
		let _localctx: SortContext = new SortContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, commandsParser.RULE_sort);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.NOT) {
				{
				this.state = 106;
				this.match(commandsParser.NOT);
				}
			}

			this.state = 109;
			_la = this._input.LA(1);
			if (!(_la === commandsParser.DATE_ATTRIBUTE || _la === commandsParser.STRING_ATTRIBUTE)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public date_filter(): Date_filterContext {
		let _localctx: Date_filterContext = new Date_filterContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, commandsParser.RULE_date_filter);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.match(commandsParser.DATE_ATTRIBUTE);
			this.state = 112;
			this.match(commandsParser.T__1);
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.NOT) {
				{
				this.state = 113;
				this.match(commandsParser.NOT);
				}
			}

			this.state = 124;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case commandsParser.NULL:
				{
				this.state = 116;
				this.match(commandsParser.NULL);
				}
				break;
			case commandsParser.QUOTE:
			case commandsParser.SORT:
			case commandsParser.BEFORE:
			case commandsParser.AFTER:
			case commandsParser.DATE_ATTRIBUTE:
			case commandsParser.STRING_ATTRIBUTE:
			case commandsParser.TEXT:
				{
				this.state = 121;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
				case 1:
					{
					this.state = 117;
					_la = this._input.LA(1);
					if (!(_la === commandsParser.BEFORE || _la === commandsParser.AFTER)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					this.state = 119;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === commandsParser.WS) {
						{
						this.state = 118;
						this.match(commandsParser.WS);
						}
					}

					}
					break;
				}
				this.state = 123;
				this.date_value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string_filter(): String_filterContext {
		let _localctx: String_filterContext = new String_filterContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, commandsParser.RULE_string_filter);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this.match(commandsParser.STRING_ATTRIBUTE);
			this.state = 127;
			this.match(commandsParser.T__1);
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === commandsParser.NOT) {
				{
				this.state = 128;
				this.match(commandsParser.NOT);
				}
			}

			this.state = 133;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case commandsParser.NULL:
				{
				this.state = 131;
				this.match(commandsParser.NULL);
				}
				break;
			case commandsParser.QUOTE:
			case commandsParser.SORT:
			case commandsParser.BEFORE:
			case commandsParser.AFTER:
			case commandsParser.DATE_ATTRIBUTE:
			case commandsParser.STRING_ATTRIBUTE:
			case commandsParser.TEXT:
				{
				this.state = 132;
				this.string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string(): StringContext {
		let _localctx: StringContext = new StringContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, commandsParser.RULE_string);
		try {
			let _alt: number;
			this.state = 144;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case commandsParser.QUOTE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 135;
				this.quoted_string();
				}
				break;
			case commandsParser.SORT:
			case commandsParser.BEFORE:
			case commandsParser.AFTER:
			case commandsParser.DATE_ATTRIBUTE:
			case commandsParser.STRING_ATTRIBUTE:
			case commandsParser.TEXT:
				this.enterOuterAlt(_localctx, 2);
				{
				{
				this.state = 136;
				this.value_token();
				this.state = 141;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 20, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 137;
						this.match(commandsParser.WS);
						this.state = 138;
						this.value_token();
						}
						}
					}
					this.state = 143;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 20, this._ctx);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public date_value(): Date_valueContext {
		let _localctx: Date_valueContext = new Date_valueContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, commandsParser.RULE_date_value);
		try {
			let _alt: number;
			this.state = 155;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case commandsParser.QUOTE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 146;
				this.quoted_string();
				}
				break;
			case commandsParser.SORT:
			case commandsParser.BEFORE:
			case commandsParser.AFTER:
			case commandsParser.DATE_ATTRIBUTE:
			case commandsParser.STRING_ATTRIBUTE:
			case commandsParser.TEXT:
				this.enterOuterAlt(_localctx, 2);
				{
				{
				this.state = 147;
				this.value_token();
				this.state = 152;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 148;
						this.match(commandsParser.WS);
						this.state = 149;
						this.value_token();
						}
						}
					}
					this.state = 154;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public value_token(): Value_tokenContext {
		let _localctx: Value_tokenContext = new Value_tokenContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, commandsParser.RULE_value_token);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << commandsParser.SORT) | (1 << commandsParser.BEFORE) | (1 << commandsParser.AFTER) | (1 << commandsParser.DATE_ATTRIBUTE) | (1 << commandsParser.STRING_ATTRIBUTE) | (1 << commandsParser.TEXT))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public quoted_string(): Quoted_stringContext {
		let _localctx: Quoted_stringContext = new Quoted_stringContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, commandsParser.RULE_quoted_string);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this.match(commandsParser.QUOTE);
			this.state = 160;
			this.quoted_content();
			this.state = 161;
			this.match(commandsParser.QUOTE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public quoted_content(): Quoted_contentContext {
		let _localctx: Quoted_contentContext = new Quoted_contentContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, commandsParser.RULE_quoted_content);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 163;
				_la = this._input.LA(1);
				if (!(_la === commandsParser.TEXT || _la === commandsParser.WS)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === commandsParser.TEXT || _la === commandsParser.WS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!commandsParser.__ATN) {
			commandsParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(commandsParser._serializedATN));
		}

		return commandsParser.__ATN;
	}

}

export class QueryContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(commandsParser.EOF, 0); }
	public action_query(): Action_queryContext | undefined {
		return this.tryGetRuleContext(0, Action_queryContext);
	}
	public filter_query(): Filter_queryContext | undefined {
		return this.tryGetRuleContext(0, Filter_queryContext);
	}
	public raw_string(): Raw_stringContext | undefined {
		return this.tryGetRuleContext(0, Raw_stringContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return commandsParser.RULE_query; }
	// @Override
	public enterRule(listener: commandsListener): void {
		if (listener.enterQuery) {
			listener.enterQuery(this);
		}
	}
	// @Override
	public exitRule(listener: commandsListener): void {
		if (listener.exitQuery) {
			listener.exitQuery(this);
		}
	}
	// @Override
	public accept<Result>(visitor: commandsVisitor<Result>): Result {
		if (visitor.visitQuery) {
			return visitor.visitQuery(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class Action_queryContext extends ParserRuleContext {
	public filters(): FiltersContext | undefined {
		return this.tryGetRuleContext(0, FiltersContext);
	}
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(commandsParser.WS);
		} else {
			return this.getToken(commandsParser.WS, i);
		}
	}
	public actions(): ActionsContext | undefined {
		return this.tryGetRuleContext(0, ActionsContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return commandsParser.RULE_action_query; }
	// @Override
	public enterRule(listener: commandsListener): void {
		if (listener.enterAction_query) {
			listener.enterAction_query(this);
		}
	}
	// @Override
	public exitRule(listener: commandsListener): void {
		if (listener.exitAction_query) {
			listener.exitAction_query(this);
		}
	}
	// @Override
	public accept<Result>(visitor: commandsVisitor<Result>): Result {
		if (visitor.visitAction_query) {
			return visitor.visitAction_query(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class Filter_queryContext extends ParserRuleContext {
	public filters(): FiltersContext {
		return this.getRuleContext(0, FiltersContext);
	}
	public WS(): TerminalNode | undefined { return this.tryGetToken(commandsParser.WS, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return commandsParser.RULE_filter_query; }
	// @Override
	public enterRule(listener: commandsListener): void {
		if (listener.enterFilter_query) {
			listener.enterFilter_query(this);
		}
	}
	// @Override
	public exitRule(listener: commandsListener): void {
		if (listener.exitFilter_query) {
			listener.exitFilter_query(this);
		}
	}
	// @Override
	public accept<Result>(visitor: commandsVisitor<Result>): Result {
		if (visitor.visitFilter_query) {
			return visitor.visitFilter_query(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class Raw_stringContext extends ParserRuleContext {
	public value_token(): Value_tokenContext[];
	public value_token(i: number): Value_tokenContext;
	public value_token(i?: number): Value_tokenContext | Value_tokenContext[] {
		if (i === undefined) {
			return this.getRuleContexts(Value_tokenContext);
		} else {
			return this.getRuleContext(i, Value_tokenContext);
		}
	}
	public WS(): TerminalNode[];
	public WS(i: number): TerminalNode;
	public WS(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(commandsParser.WS);
		} else {
			return this.getToken(commandsParser.WS, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return commandsParser.RULE_raw_string; }
	// @Override
	public enterRule(listener: commandsListener): void {
		if (listener.enterRaw_string) {
			listener.enterRaw_string(this);
		}
	}
	// @Override
	public exitRule(listener: commandsListener): void {
		if (listener.exitRaw_string) {
			listener.exitRaw_string(this);
		}
	}
	// @Override
	public accept<Result>(visitor: commandsVisitor<Result>): Result {
		if (visitor.visitRaw_string) {
			return visitor.visitRaw_string(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

